# c2me

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README-zh.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml  tauri-release.yml
desktop/: package.json  pnpm-lock.yaml  vite.config.ts
desktop/scripts/: bundle-bot.sh
desktop/src/: App.css  App.tsx  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: DESKTOP_BOT_INTEGRATION_PLAN.md  v1.5.0-implementation-plan.md
src/: main.ts
src/config/: config.ts
src/constants/: messages.ts  models.ts
src/handlers/: claude.ts  directory.ts  github.ts  permission-manager.ts  telegram.ts
src/models/: analytics.ts  chat-message.ts  project.ts  types.ts  user-session.ts
src/queue/: message-batcher.ts  priority-queue.ts
src/server/: express.ts  message-routes.ts
src/services/: auth-service.ts  markdownToTelegramEntities.ts  message-aggregator.ts  message-store.ts  telegram-sender.ts
src/storage/: factory.ts  interface.ts  memory.ts  redis.ts
src/utils/: async-queue.ts  deduplicator.ts  formatter.ts  image-handler.ts  logger.ts  metadata-extractor.ts  metrics.ts  progress-config.ts  progress-manager.ts  rate-limiter.ts  retry.ts  session-progress.ts  stream-manager.ts  (+1 more)
tests/: setup.ts
workers/: package.json  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.toml.example
(+35 files in other folders)
