[package]
name = "chatcode-desktop"
version = "0.1.0"
description = "ChatCode Desktop - Telegram Bot Manager"
authors = ["ChatCode Team"]
edition = "2021"

[lib]
name = "chatcode_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
