[package]
name = "chatcode-desktop"
version = "1.5.5"
description = "ChatCode Desktop - Telegram Bot Manager"
authors = ["ChatCode Team"]
edition = "2021"

[lib]
name = "chatcode_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-log = "2.8.0"
tauri-plugin-fs = "2.4.5"
log = "0.4.29"
once_cell = "1.19"
